UI (tracker): zoom on the image used for counters to avoid white spaces

--- a/core/src/css/component/game-counters/counters-common.scss
+++ b/core/src/css/component/game-counters/counters-common.scss
@@ -13,7 +13,9 @@
 .image {
 	width: 100%;
 	height: 100%;
-	clip-path: ellipse(50% 50% at 50% 50%);
+	// clip-path: ellipse(50% 50% at 50% 50%);
+	transform: scale(1.15);
+	clip-path: ellipse(42% 42% at 50% 50%);
 }
 
 .frame {
